--- a/Backend/LangVet/LangVet.Infrastructure/LangVet.Infrastructure.csproj
+++ b/Backend/LangVet/LangVet.Infrastructure/LangVet.Infrastructure.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\LangVet.Application\LangVet.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
