--- a/Backend/LangVet/LangVet.API/LangVet.API.csproj
+++ b/Backend/LangVet/LangVet.API/LangVet.API.csproj
@@ -18,11 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\LangVet.Infrastructure\LangVet.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
